--- a/app/src/main/res/layout/activity_placar.xml
+++ b/app/src/main/res/layout/activity_placar.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlacarActivity">
+    tools:context=".PlacarActivity"
+    tools:layout_editor_absoluteY="81dp">
 
     <TextView
         android:id="@+id/tvTimeCasa"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
@@ -22,7 +23,7 @@
     <TextView
         android:id="@+id/tvTimeVisitante"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="TIME VISITANTE"
@@ -35,40 +36,42 @@
         android:id="@+id/btGolCasa"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:text="GOAL"
         app:layout_constraintEnd_toStartOf="@+id/btGolVisitante"
-        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPlacarCasa" />
 
     <Button
         android:id="@+id/btGolVisitante"
-        android:layout_width="172dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
         android:text="GOAL"
-        app:layout_constraintTop_toTopOf="@+id/btGolCasa"
-        tools:layout_editor_absoluteX="196dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btGolCasa"
+        app:layout_constraintTop_toTopOf="@+id/btGolCasa" />
 
     <TextView
         android:id="@+id/tvPlacarCasa"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="0"
         android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="@+id/btGolCasa"
+        app:layout_constraintEnd_toStartOf="@+id/btGolVisitante"
         app:layout_constraintStart_toStartOf="@+id/btGolCasa"
         app:layout_constraintTop_toBottomOf="@+id/tvTimeCasa" />
 
     <TextView
         android:id="@+id/tvPlacarVisitante"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="0"
